<?xml version="1.0"?>
<package format="2">
  <name>diffdrive_rpi</name>
  <version>0.0.1</version>
  <description>Provides an interface between diff_drive_controller and an Arduino.</description>

  <maintainer email="lbielinski01@gmail.com">Josh Newans</maintainer>
  <author email="lbielinski01@gmail.com">Josh Newans</author>
  <license>TODO: License declaration</license>

  <!-- <url type="website">http://wiki.ros.org/diffdrive_rpi</url> -->
  <url type="bugtracker">https://github.com/lukbieli/diffdrive_rpi/issues</url>
  <url type="repository">https://github.com/lukbieli/diffdrive_rpi</url>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <!-- <depend>serial</depend> -->
  <depend>pigpio</depend>

  <!-- <build_depend>pigpio</build_depend> -->
  <!-- <build_export_depend>pigpio</build_depend> -->
  <!-- <exec_depend>pigpio</exec_depend> -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>
